<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".SettingUpRiskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/riskType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/risk_type" />

        <Spinner
            android:id="@+id/spinnerRiskType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/risk_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/assessment_of_the_likelihood_of_occurrence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/assessment_of_the_likelihood_of_occurrence" />

        <TextView
            android:id="@+id/assessment_of_the_likelihood_of_occurrence_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0" />

        <SeekBar
            android:id="@+id/seekBar_assessment_of_the_likelihood_of_occurrence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detection_probability_estimate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detection_probability_estimate" />

        <TextView
            android:id="@+id/detection_probability_estimate_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0" />

        <SeekBar
            android:id="@+id/seekBar_detection_probability_estimate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/severity_assessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/severity_assessment" />

        <TextView
            android:id="@+id/severity_assessment_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0" />

        <SeekBar
            android:id="@+id/seekBar_severity_assessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/magnitude_of_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="0" />

        <TextView
            android:id="@+id/significance_of_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="0" />

        <TextView
            android:id="@+id/prioritizing_risk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:text="0" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>